rust-core/tests/snapshots/snapshot_diagnostics__harper_multiple_issues.snap
---
source: tests/snapshot_diagnostics.rs
expression: snap
---
- start_byte: 8
  end_byte: 10
  message: Incorrect indefinite article.
  rule_id: harper.Miscellaneous
  unified_id: style.unknown
  severity: 2
  suggestions:
    - a
  confidence: 0.8
- start_byte: 17
  end_byte: 24
  message: Did you mean to repeat this word?
  rule_id: harper.Repetition
  unified_id: typography.repeated_word
  severity: 2
  suggestions:
    - The
  confidence: 0.8
- start_byte: 32
  end_byte: 38
  message: "Did you mean to spell `runing` this way?"
  rule_id: harper.Spelling
  unified_id: spelling.typo
  severity: 2
  suggestions:
    - running
    - ruing
    - ruining
  confidence: 0.8
