rust-core/tests/snapshots/snapshot_diagnostics__insights_complex.snap
---
source: tests/snapshot_diagnostics.rs
assertion_line: 349
expression: insights
---
word_count: 15
sentence_count: 1
character_count: 167
reading_level: 38.508
