rust-core/tests/snapshots/snapshot_diagnostics__insights_simple.snap
---
source: tests/snapshot_diagnostics.rs
assertion_line: 340
expression: insights
---
word_count: 10
sentence_count: 2
character_count: 30
reading_level: -4.8
