rust-core/tests/snapshots/snapshot_diagnostics__prose_basic_markdown.snap
---
source: tests/snapshot_diagnostics.rs
assertion_line: 46
expression: extracted
---
- "# Title"
- A paragraph.
- Another paragraph.
