rust-core/tests/snapshots/snapshot_diagnostics__prose_html.snap
---
source: tests/snapshot_diagnostics.rs
assertion_line: 83
expression: extracted
---
- Hello world.
- Second para.
