rust-core/tests/snapshots/snapshot_diagnostics__prose_latex.snap
---
source: tests/snapshot_diagnostics.rs
expression: extracted
---
- Introduction
- This is a simple paragraph with some text.
- "Bold text} and \\textit{italic text} here."
- is a famous equation.
- First list item
- Second list item
- Final paragraph here.
