rust-core/tests/snapshots/snapshot_diagnostics__prose_latex_no_document.snap
---
source: tests/snapshot_diagnostics.rs
expression: extracted
---
- "Test Section}\nSome text without a document environment."
